endpoint /routes funcional